# LaboratorioProgrammazione

./: CMakeLists.txt  Displayer.cpp  Displayer.h  Note.cpp  Note.h  Notebook.cpp  Notebook.h  Observer.cpp  Observer.h  README.md  SetCollezioni.cpp  SetCollezioni.h  Subject.cpp  Subject.h  main.cpp
Test/: AllTest.cpp  CMakeLists.txt  Note.h  Notebook.h  Observer.h  SetCollezioni.h  Subject.h
Test/TestGenerale/: AllTest.cpp  CMakeLists.txt  NoteTest.cpp  NotebookTest.cpp
test/: CMakeLists.txt  NoteTest.cpp  NotebookTest.cpp  RunAllTest.cpp
